  part of the API.
- Raw samples can now be loaded using the new Sample_LoadRaw* family of functions for sound effects.
- PowerPC 64 support
- ALSA (Advanced Linux Sound Architecture) driver is now working with "recent"
(actually a few years back) ALSAs.
- Change MDRIVER "char *" fields to "const char *".
    - Thanks to Stéphan Kochen.

BUGFIXES

- The sun driver now compiles on solaris (Thanks to Nicolas Gros d'Aillon
  for sending me Jonathan Perkin's fix)
- The wav output driver had problems on big endian systems. Thanks to
  Axel "awe" Wefers for fixing this.
- A warning reported by Stéphane LOEUILLET in libmikmod.m4 with autoconf 1.8 was fixed.
- The 'card' argument, supported by the OSS driver was not documented via
  the MDRIVER->CmdLineHelp string.
- libmikmod-3.1.11-CVE-2010-2546,2971.diff (from Mandriva/Mageia).
- libmikmod-3.1.11-CVE-2009-3995,3996.diff (from Mandriva/Mageia).
- Now checking for linking against -lm (from Mandriva/Mageia).
- Modified patch of libmikmod-CVE-2009-0179.patch (from Mandriva/Mageia).
- Apply the libmikmod-CVE-2007-6720.patch (from Mandriva/Mageia).
- Implement a fix for sprintf-of-list
    - sprintf(list, "%sSOMETHING", list) does not work as expected and
    suffers from the 
    http://en.wikipedia.org/wiki/Schlemiel_the_Painter%27s_algorithm
    syndrome.
- Apply a patch for non-blocking opening of the OSS driver. (from Mandriva/Mageia).
- Fixed the prototypes of vc_callback (thanks to P. Martin).
- Cast a vc_callback parameter to "unsigned char *" instead of "char *",
becuase the former is what it accepts (thanks to P. Martin).
- Check for Samples' validatity in virtch_common.c (thanks to P. Martin).
- Fix compilation on MSVC.
    - Thanks to Stéphan Kochen.

Summary of changes between libmikmod 3.1.10 and libmikmod 3.1.11 (Thiers):
==========================================================================

libmikmod 3.1.11 was released on 01/21/2004.
